<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Magic Leap, Inc. All Rights Reserved
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="input_title_default">Input</string>

    <string name="color_picker_dialog_title">Change my color</string>
    <string name="luminosity">Luminosity</string>
    <string name="opacity">Opacity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, augue volutpat nibh iaculis tincidunt, at purus imperdiet. Mattis odio pulvinar vel, lacus tincidunt rhoncus massa tortor, turpis ligula urna, lorem nullam vitae. Nunc suscipit, mollis eget, laoreet turpis lectus tempus id facilisis sem, accumsan venenatis etiam est imperdiet augue est, eget eget eget semper vel bibendum. Ac suscipit ligula sapien, molestie fringilla, tortor sollicitudin sed, consequat eget lacinia et in vestibulum, vel lacinia phasellus sed. Diam sed mauris ultricies expedita ut, fusce in ipsum malesuada scelerisque, dictum donec odio hac a. Ante vel metus faucibus, tortor tellus officia libero iaculis turpis iaculis, ante ut wisi ac quia dui, praesent aenean sed purus ultricies cum, mauris ut aliquam arcu. Sagittis lobortis, lacus tincidunt sit. Eu ante sed mollis a tempor hendrerit, mi habitasse massa quisque nec tellus lorem. Nec vestibulum nostrum risus nonummy, in sodales. Dictum ut nonummy labore, nulla enim eget proin tempus tortor dui, nec blandit magna rhoncus vitae dis ut, luctus vel quis ultrices in, cursus sed. Nulla gravida velit suspendisse elit, metus tellus condimentum, leo urna commodo curabitur dolor metus, tellus lectus, et ante.

Porta non proin, feugiat neque, dui ut consequat turpis, nisl enim varius. Non natoque semper tempor curabitur massa. Eu massa quam nullam. Facilisi libero nibh, commodo suspendisse convallis convallis nascetur nibh, consectetuer eget nibh vestibulum, est quis lobortis a ligula. Dolor lacus placerat, purus lacinia elit. Nulla nunc mauris facilisi ut rutrum, fermentum dolor. Pede dolor, quis saepe cursus nibh sit, a neque quibusdam. Consectetur aliquam est elit, imperdiet feugiat, mi assumenda morbi lectus, nec tempor pulvinar maecenas quam. Ultricies sed proin, gravida donec ac tempor et cras non. Tincidunt quis magna aenean.

Amet dictum quisque eu nisl, fringilla quam scelerisque feugiat. Nullam odit, ante facilisis. Nunc vitae elit et, adipiscing pede laborum. At nibh viverra, tincidunt wisi, vestibulum lacinia amet lobortis tellus at, cras fusce curae nulla, cras vestibulum curabitur. Laboriosam augue, mi senectus velit vel, at aenean phasellus vitae et ante, vehicula mollis aliquam nulla. Molestie amet sed dui pellentesque turpis, etiam commodo leo velit commodo, ornare dolor. Phasellus at, massa fringilla semper ac expedita vel, amet facilisis quam cursus elit sodales vel, et tempus elit. Eget libero at et, fringilla pharetra aenean, pellentesque aenean feugiat nec ut laoreet enim. Congue felis, nam amet pede augue, mus nisl et vitae vestibulum varius erat, massa class wisi volutpat faucibus eros, vulputate sapien eleifend id in pharetra.

Diam id nostra sit ut at lacus, mattis volutpat orci neque ac. Orci nunc, amet consectetuer ac, pellentesque interdum. Arcu faucibus proin mi, voluptatem pellentesque non quisque in, velit vestibulum, eu dignissim dictum, amet etiam urna id tristique habitasse. Lorem amet purus, faucibus at erat tristique, habitant tristique a quis, nulla tincidunt ut. Mi vivamus magna, diam per ac vestibulum, rutrum dictum adipiscing massa ipsum in. Donec commodo, ut lacinia id mi diam aenean augue, quis nunc porta aenean sem. Sem urna id rutrum ac aenean, integer molestie id a aliquam. Eleifend quam lobortis scelerisque enim nibh vitae, at donec ultrices integer neque tempus, augue urna duis, ac rhoncus lacus debitis eu.</string>
</resources>